--- a/_config.yml
+++ b/_config.yml
@@ -87,14 +87,14 @@ social:
   - name: GitHub
     icon: github
     username: bencentra
-    url: https://github.com/bencentra
+    url: https://github.com/larryjung
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: Chae Gyun Jung
+    url: https://www.linkedin.com/in/chae-gyun-jung-49910a168
     desc: Connect with me on LinkedIn
     share: true
 
